--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="ja" prefix="og=: http://opg.me/ns#">
+<body>
+<meta charset="utf-8">
+<!-- css -->
+<style>
+#page_top{
+	width: 100px;
+	height: 40px;
+	position: fixed;
+	right: 0;
+	bottom: 10px;
+	background: #007ab5;
+	opacity: 0.6;
+}
+#page_top a{
+	position: relative;
+	display: block;
+	width: 100px;
+	height: 40px;
+	text-decoration: none;
+}
 
+#page_top a::after{
+	content: '↑ PAGE TOP';
+	font-size: 14px;
+	font-weight: bold;
+	color: #fff;
+	position: absolute;
+	top: 10px;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	margin: auto;
+	text-align: center;
+}
+</style>
+  </head>
+  <body>
+    <div id="page_top"><a href="#"></a></div>
+  </body>
+</html>
+  
