--- a/index.html
+++ b/index.html
@@ -35,8 +35,74 @@
 	text-align: center;
 }
 </style>
+<script type="text/javascript">
+jQuery(function() {
+	var appear = false;
+    	var pagetop = $('#page_top');
+    	$(window).scroll(function () {
+		if ($(this).scrollTop() > 100) {
+        	if (appear == false) {
+          		appear = true;
+          		pagetop.stop().animate({
+            			'bottom': '50px'
+          		}, 300);
+        	}
+      	} else {
+        if (appear) {
+          appear = false;
+          pagetop.stop().animate({
+            'bottom': '-50px'
+          }, 300);
+        }
+      }
+    });
+    pagetop.click(function () {
+      $('body, html').animate({ scrollTop: 0 }, 500);
+      return false;
+    });
+  });
+    </script>
   </head>
   <body>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
+	  <p>a</p>
     <div id="page_top"><a href="#"></a></div>
   </body>
 </html>
