--- a/index.html
+++ b/index.html
@@ -64,45 +64,37 @@ jQuery(function() {
     </script>
   </head>
   <body>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
-	  <p>a</p>
+	<div id="langChenge">
+	<input type="radio" name="lang" id="lJ" checked>
+	<input type="radio" name="lang" id="lE">
+	<input type="radio" name="lang" id="lZ">
+
+	<label for="lJ">
+	<span lang="ja">日本語</span>
+	<span lang="en">Japanese</span>
+	<span lang="zh">日本</span>
+	</label>
+	<label for="lE">
+	<span lang="ja">英語</span>
+	<span lang="en">English</span>
+	<span lang="zh">英语</span>
+	</label>
+	<label for="lZ">
+	 <span lang="ja">中国語</span>
+	 <span lang="en">Chinese</span>
+	 <span lang="zh">中文</span>
+	</label>
+	<div>
+	<h1 lang="ja">ザ・アクションミニゲームワールドサーバー</h1>
+	<p lang="ja">The Action Minigame Server 公式ホームページです</p>
+	<h1 lang="ja">ログインまたは新規アカウント作成</h1>
+	<a lang="ja" href="php/newaccount.php/index.php">ログインまたは新規アカウント作成</a>
+	<h1 lang="ja">フォローしてくれますか？</h1>
+	<a href="https://twitter.com/AkausuFloal?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" lang="ja">Follow @AkausuFloal</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</div>
+	<footer class="st-Footer">
+	<small lang="ja" class="Copyright">Copyright © 2021 TheAction CO., LTD. All rights reserved.</small>
+	</footer>
     <div id="page_top"><a href="#"></a></div>
   </body>
 </html>
