--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	text-align: center;
 }
 </style>
+<link rel="stylesheet" type="text/css" href="css/main/style.css">
+<!-- JavaScript -->	
 <script type="text/javascript">
 jQuery(function() {
 	var appear = false;
