--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja" prefix="og=: http://opg.me/ns#">
+<!-- OGP -->
+<meta property="og:site_name" content="The Action Minigame World Server">
+<meta property="og:description" content="">
+<meta property="og:title" content="AFNs - The Action Minigame World Server">
+<!-- twitter:card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@AFN_FloalWheat">
+<title>AFNs - The Action Minigame World Server</title>
+<link rel="shortcut icon" href="favicon/favicon.ico" />	
 <body>
 <meta charset="utf-8">
 <!-- css -->
